@@ -9,6 +9,7 @@ Changes for 1.9
 
 Changes for 1.8.4rc1
 
+ - [ZBX-2982] added ip and port of zabbix server in dashboard widget "Status of Zabbix" (Vedmak)
  - [ZBX-2964] fixed processes failing to start when no IPv6 is available on the system (asaveljevs,Sasha)
  - [ZBX-2977] fixed removing unused records in node_cksum table; thanks to Łukasz Reszka (Sasha)
  - [ZBX-2946] fixed building from FreeBSD ports with libexecinfo installed; thanks to Dmitry Yakovlev (asaveljevs)
